# serial-async

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
serial-async/: Cargo.toml
serial-async/src/: lib.rs
serial-async/tests/: test.rs
some-serial/: .bare-test.toml  Cargo.toml  bare-test.toml
some-serial/src/: lib.rs  ns16550.rs  pl011.rs
some-serial/tests/: test.rs
src/: lib.rs
tests/: test.rs
